Fixed turnover calculation, added comments in yellow

--- a/assignments/Trading_Strat_updated.ipynb
+++ b/assignments/Trading_Strat_updated.ipynb
@@ -117,7 +117,7 @@
     "  Daily prices, volumes, and fundamentals.\n",
     "\n",
     "- **JKP factors**  \n",
-    "  The Jegadeesh–Kang–Pollet factor panel used for style scores.\n",
+    "  The Jensen-Kelly-Pedersen factor panel used for style scores.\n",
     "\n",
     "- **Swiss Performance Index (SPI)**  \n",
     "  Benchmark total-return series for Swiss equities.\n",
@@ -286,6 +286,8 @@
     "\n",
     "`bibfn_filter_jkp_factor_scores` :\n",
     "Allows filtering of stocks based on JKP factor scores, for example by excluding the lowest 5% past 6-month returns or the highest 5% volatility. This targeted filtering helps to avoid undesirable stocks, such as those with low quality or excessive risk, thereby improving the overall quality of the investment universe. <span style=\"color:red\">TODO: Ask Nils why we did not use it</span>\n",
+    "\n",
+    "<span style=\"color:yellow\">We could use it but I didnt because it didnt imporve performance. It could be one version of the different backtests</span>\n",
     "\n",
     "\n",
     "*Note: Full implementation details for these functions are provided in Appendix A.*"
@@ -459,7 +461,9 @@
     "\n",
     "    By focusing on **Ledoit–Wolf** (for robust shrinkage), **EWMA** (for dynamic weighting), and their **mix** (for blending short‐ and long‐run information), the below chosen covariance estimator that is capable at dealing with market shocks while preserving long‐term relationships seemed the most suitable choice to move forward with.\n",
     "\n",
-    "<span style=\"color:red\">TODO (ask Nils if there is a specific code for the mix)</span> \n"
+    "<span style=\"color:red\">TODO (ask Nils if there is a specific code for the mix)</span> \n",
+    "\n",
+    "<span style=\"color:yellow\">NO, it just calls ewma_ledoit twice and takes the weighted averaga</span> \n"
    ]
   },
   {
@@ -563,7 +567,9 @@
    "source": [
     "Talk here about why we chose the Mean Variance Optimisation Strategy\n",
     "\n",
-    "<span style=\"color:red\">TODO - probably easier if you do this bit Nils</span> "
+    "<span style=\"color:red\">TODO - probably easier if you do this bit Nils</span> \n",
+    "\n",
+    "<span style=\"color:yellow\">We used the classical Mean Variance Optimisation with a high risk aversion of 100 as the base model, because we found that covariance matrices are easier to predict than returns, therefore providing good OOS performance. Furthermore, in our tests, the LTR views combined with Black-Litterman didn't significantly enhance return predictions in our setup.</span> "
    ]
   },
   {
@@ -848,7 +854,7 @@
    ],
    "source": [
     "# existing turnover & weights\n",
-    "to_bl_ltr = bt_bl_ltr.strategy.turnover(return_series=return_series)\n",
+    "to_bl_ltr = bt_bl_ltr.strategy.turnover(return_series=return_series, rescale = False)\n",
     "to_bl_ltr.index    = pd.to_datetime(to_bl_ltr.index)\n",
     "\n",
     "# name turnover\n",
