--- a/assignments/Trading_Strat_updated.ipynb
+++ b/assignments/Trading_Strat_updated.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Nils Winkler, 24-744-542, nilschristian.winkler@uzh.ch\n",
     "\n",
-    "Andi Vjerdha, 24-745-135,  andivjerdha00@gmail.com\n",
+    "Andi Vjerdha, 24-745-135,  andi.vjerdha@uzh.ch\n",
     "\n",
     "Angus Martin, 24-745-747, angusalexander.martin@uzh.ch\n",
     "\n",
@@ -824,9 +824,19 @@
    "id": "78efe65d",
    "metadata": {},
    "source": [
-    "Describe and explain graphs, talking about why it is expected based on the choices we made earlier e.g in defining our covariance matrix, optimisation strategy, etc\n",
+    "<span style=\"color:green\">\n",
     "\n",
-    "<span style=\"color:red\">TODO </span> "
+    "The first graph shows how the total return performs compared to the benchmark. As we can see, the trend is similar when we compare them after 2017. In fact, our custom strategy manages to achieve better results between 2016 and 2019 and maintaining them for the rest of the period. In the second graph we see a confirmation of this outperformane. \n",
+    "\n",
+    "We expect this behaviour from our strategy due to several reasons:\n",
+    "<ul>\n",
+    "  <li>we estimate the covariance matrix using Ledoit-Wolf shrinkage, which is a method that is more stable and regularized, preventing the overfitting from historical noisy data; </li>\n",
+    "  <li>we use Black Litterman strategy, which improves the quality of expected returns, enabling the model to pick better performing assets maintaining control over the risk;</li>\n",
+    "  <li>we simulate transaction costs, making the strategy more realistical.</li>\n",
+    "</ul>\n",
+    "\n",
+    "All these features balances the robustness of the strategy keeping under control risk while aiming at the best returns available from the stocks. \n",
+    "</span>"
    ]
   },
   {
@@ -886,9 +896,9 @@
    "id": "68b5bc3f",
    "metadata": {},
    "source": [
-    "Describe and explain graph\n",
-    "\n",
-    "<span style=\"color:red\">TODO </span> "
+    "<span style=\"color:green\">\n",
+    "The graph above plots the behaviour of the portfolio from 2015 to 2024. We have that after the initial spike Net exposure stays around 0.75 for 5 years until it detetcs a high volatility period, represented by the COVID19 crisis, where it lowers its exposure to prevent high losses. Turnover maintains a low value for the whole period in which we performed the strategy, proving that the strategy is robust and limits the portfolio rebalancing, lowering as much as possible transaction costs. The turnover spike in 2020 is due to the change in correlation between stocks manifesting in the COVID19 crisis. Despite this, due to the way we evaluate the covariance matrix, the turnover still does not go above 0.2. \n",
+    "</span> "
    ]
   },
   {
@@ -1145,9 +1155,23 @@
    "id": "f8a2a734",
    "metadata": {},
    "source": [
-    "Describe and explain results\n",
+    "<span style=\"color:green\">\n",
+    "We know describe in detail the metrics shown in the table above:\n",
+    "<ul>\n",
+    "  <li>annual return: the strategy successfully outperforms the benchmark in annualized returns; </li>\n",
+    "  <li>cumulative return: the gain made through the strategy is almost the double compared to the resul of the benchmark; </li>\n",
+    "  <li>annual volatility: the lower volatility shows that our strategy is less risky in terms of return fluctuation; </li>\n",
+    "  <li>sharpe ratio: strategy has a a significantly higher risk adjusted performance; </li>\n",
+    "  <li>max drawdown: the strategy suffers a slightly larger worst case drop; </li>\n",
+    "  <li>tracking error: deviation from the benchmark; </li>\n",
+    "  <li>downside tracking error: shows the outperformance in negative periods; </li>\n",
+    "  <li>information ratio: shows that the strategy generates alpha respect the benchmark; </li> \n",
+    "  <li>hit ratio: our strategy outperforms the benchmark half of the time; </li>\n",
+    "  <li>upside capture: the strategy captures roughly 80% of the benchmark gains in bullish market periods; </li>\n",
+    "  <li>downside capture: the strategy captures 74% of the benchmark losses, showing a protection in bearish market periods.  </li>\n",
+    "</ul>\n",
     "\n",
-    "<span style=\"color:red\">TODO </span> "
+    "</span> "
    ]
   },
   {
@@ -1599,7 +1623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1613,7 +1637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
