--- a/assignments/Trading_Strat_updated.ipynb
+++ b/assignments/Trading_Strat_updated.ipynb
@@ -816,6 +816,8 @@
    "source": [
     "Describe and explain graphs, talking about why it is expected based on the choices we made earlier e.g in defining our covariance matrix, optimisation strategy, etc\n",
     "\n",
+    "worth noting that historic correlations broke down during covid, potentially causing poor performance in strategy\n",
+    "\n",
     "<span style=\"color:red\">TODO </span> "
    ]
   },
