--- a/assignments/Trading_Strat_updated.ipynb
+++ b/assignments/Trading_Strat_updated.ipynb
@@ -285,9 +285,7 @@
     "\n",
     "\n",
     "`bibfn_filter_jkp_factor_scores` :\n",
-    "Allows filtering of stocks based on JKP factor scores, for example by excluding the lowest 5% past 6-month returns or the highest 5% volatility. This targeted filtering helps to avoid undesirable stocks, such as those with low quality or excessive risk, thereby improving the overall quality of the investment universe. However, we did not end up using this in our final backtest as it did not imporve performance significantly. \n",
-    "\n",
-    "<span style=\"color:yellow\">We could use it but I didnt because it didnt imporve performance. It could be one version of the different backtests</span>\n",
+    "Allows filtering of stocks based on JKP factor scores, for example by excluding the lowest 5% past 6-month returns or the highest 5% volatility. This targeted filtering helps to avoid undesirable stocks, such as those with low quality or excessive risk, thereby improving the overall quality of the investment universe. However, we did not end up using this in our final backtest as it did not imporve performance significantly.  \n",
     "\n",
     "\n",
     "*Note: Full implementation details for these functions are provided in Appendix A.*"
@@ -458,11 +456,7 @@
     "        - Builds two EWMA–Ledoit estimates with different spans (e.g. span₁ = 126 days for short‐term sensitivity, span₂ = 768 days for long‐term stability).  \n",
     "        - Mixes them with different weights (e.g. 0.3 on short, 0.7 on long) so that both short-term changes and long-term relationships are properly captured.  \n",
     "\n",
-    "    By focusing on **Ledoit–Wolf** (for robust shrinkage), **EWMA** (for dynamic weighting), and their **mix** (for blending short‐ and long‐run information), the below chosen covariance estimator that is capable at dealing with market shocks while preserving long‐term relationships seemed the most suitable choice to move forward with.\n",
-    "\n",
-    "<span style=\"color:red\">TODO (ask Nils if there is a specific code for the mix)</span> \n",
-    "\n",
-    "<span style=\"color:yellow\">NO, it just calls ewma_ledoit twice and takes the weighted averaga</span> \n"
+    "    By focusing on **Ledoit–Wolf** (for robust shrinkage), **EWMA** (for dynamic weighting), and their **mix** (for blending short‐ and long‐run information), the below chosen covariance estimator that is capable at dealing with market shocks while preserving long‐term relationships seemed the most suitable choice to move forward with.\n"
    ]
   },
   {
@@ -564,11 +558,7 @@
    "id": "19a4b137",
    "metadata": {},
    "source": [
-    "Talk here about why we chose the Mean Variance Optimisation Strategy\n",
-    "\n",
-    "<span style=\"color:red\">TODO - probably easier if you do this bit Nils</span> \n",
-    "\n",
-    "<span style=\"color:yellow\">We used the classical Mean Variance Optimisation with a high risk aversion of 100 as the base model, because we found that covariance matrices are easier to predict than returns, therefore providing good OOS performance. Furthermore, in our tests, the LTR views combined with Black-Litterman didn't significantly enhance return predictions in our setup.</span> "
+    "We used the classical Mean Variance Optimisation with a high risk aversion of 100 as the base model, because we found that covariance matrices are easier to predict than returns, therefore providing good OOS performance. Furthermore, in our tests, the LTR views combined with Black-Litterman didn't significantly enhance return predictions in our setup."
    ]
   },
   {
