added missing function to appendix

--- a/assignments/Trading_Strat_updated.ipynb
+++ b/assignments/Trading_Strat_updated.ipynb
@@ -1349,7 +1349,79 @@
     "    bs.optimization.constraints.add_linear(G=G, sense=sense, rhs=rhs)\n",
     "    return None\n",
     "```\n",
-    "\n"
+    "---\n",
+    "\n",
+    "## A.3 bibfn_filter_jkp_factor_scores\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "\n",
+    "def bibfn_filter_jkp_factor_scores(\n",
+    "    bs,\n",
+    "    rebdate: str,\n",
+    "    bounds: dict = None,\n",
+    "    **kwargs\n",
+    ") -> pd.DataFrame:\n",
+    "\n",
+    "    # Ensure rebdate is a Timestamp\n",
+    "    reb_dt = pd.to_datetime(rebdate)\n",
+    "\n",
+    "    # Load JKP data\n",
+    "    df = bs.data.jkp_data\n",
+    "\n",
+    "    # Determine IDs to include\n",
+    "    ids = df.index.get_level_values('id').unique()\n",
+    "\n",
+    "    # Filter to one-year window and desired IDs\n",
+    "    date_idx = df.index.get_level_values('date')\n",
+    "    id_idx = df.index.get_level_values('id')\n",
+    "    mask = (\n",
+    "        (date_idx < reb_dt) &\n",
+    "        (date_idx >= reb_dt - pd.Timedelta(days=365)) &\n",
+    "        (id_idx.isin(ids))\n",
+    "    )\n",
+    "    df_window = df.loc[mask]\n",
+    "\n",
+    "    # Last observation per id\n",
+    "    scores = df_window.groupby('id').last()\n",
+    "\n",
+    "    # Debug: log shapes\n",
+    "    # print(f\"df_window shape: {df_window.shape}, scores shape: {scores.shape}\")\n",
+    "\n",
+    "    # If no bounds provided, skip filtering extremes\n",
+    "    if not bounds:\n",
+    "        scores['binary'] = scores.notna().all(axis=1).astype(int)\n",
+    "        return scores\n",
+    "\n",
+    "    # Build keep mask (start all True)\n",
+    "    keep = pd.Series(True, index=scores.index)\n",
+    "\n",
+    "    # Apply bounds per specified factor only\n",
+    "    for factor, (low, high) in bounds.items():\n",
+    "        if factor not in scores.columns:\n",
+    "            raise KeyError(f\"Factor '{factor}' not found in scores columns\")\n",
+    "        series = scores[factor]\n",
+    "        # Lower bound\n",
+    "        if low is None:\n",
+    "            low_cut = -np.inf\n",
+    "        elif 0 <= low <= 1:\n",
+    "            low_cut = series.quantile(low)\n",
+    "        else:\n",
+    "            low_cut = low\n",
+    "        # Upper bound\n",
+    "        if high is None:\n",
+    "            high_cut = np.inf\n",
+    "        elif 0 <= high <= 1:\n",
+    "            high_cut = series.quantile(high)\n",
+    "        else:\n",
+    "            high_cut = high\n",
+    "        # Combine\n",
+    "        keep &= series.between(low_cut, high_cut)\n",
+    "\n",
+    "    # Filtered scores and binary indicator\n",
+    "    filtered = scores.loc[keep].copy()\n",
+    "    filtered['binary'] = filtered.notna().all(axis=1).astype(int)\n",
+    "    return filtered"
    ]
   },
   {
