--- a/assignments/Trading_Strat_updated.ipynb
+++ b/assignments/Trading_Strat_updated.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "\n",
     "`bibfn_filter_jkp_factor_scores` :\n",
-    "Allows filtering of stocks based on JKP factor scores, for example by excluding the lowest 5% past 6-month returns or the highest 5% volatility. This targeted filtering helps to avoid undesirable stocks, such as those with low quality or excessive risk, thereby improving the overall quality of the investment universe. \n",
+    "Allows filtering of stocks based on JKP factor scores, for example by excluding the lowest 5% past 6-month returns or the highest 5% volatility. This targeted filtering helps to avoid undesirable stocks, such as those with low quality or excessive risk, thereby improving the overall quality of the investment universe. However, we didn't end up using it, because it didn't lead to any significant performance gains.\n",
     "\n",
     "\n",
     "*Note: Full implementation details for these functions are provided in Appendix A.*"
@@ -1238,7 +1238,7 @@
     "    ('backtest_bl_ltr5.pickle', 'BlackLittermanMS'),\n",
     "]\n",
     "\n",
-    "fixed_costs = 0\n",
+    "fixed_costs = 0.01\n",
     "variable_costs = 0.002\n",
     "return_series = bs.data.get_return_series()\n",
     "\n",
